# algolia-slack-integration

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  trend-register.py  zappa_settings.json
